Raise z-index to avoid box being hidden.
Not sure what on FIAWEC+ has a silly-high z-index value, but we can go
higher!

--- a/static/timing71.css
+++ b/static/timing71.css
@@ -11,7 +11,7 @@ div#t71_flash {
   position: fixed;
   right: 6px;
   top: 6px;
-  z-index: 99999;
+  z-index: 1000000;
 
   border: 1px solid #59ffff;
   border-radius: 0.25em;
